--- a/client/src/app/client-page/client-navbar/client-navbar.component.html
+++ b/client/src/app/client-page/client-navbar/client-navbar.component.html
@@ -11,6 +11,9 @@
         <li class="nav-item">
           <a class="nav-link" href="home/theatres">Theatres</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="home/categories">Categories</a>
+        </li>
         <li class="nav-item" *ngIf="(isLoggedIn$ | async)">
           <a class="nav-link" href="home/reservations">Reservations</a>
         </li>
