Updated design and added 2 more filters on client side

--- a/client/src/app/client-page/client-event/client-event.component.html
+++ b/client/src/app/client-page/client-event/client-event.component.html
@@ -15,6 +15,9 @@
         <strong>{{ currentEvent.theatreName }}</strong>
       </p>
       <p class="card-text">
+        <strong>{{ currentEvent.play.type.name }}</strong>
+     </p>
+      <p class="card-text">
         Available Seats: <strong>{{ currentEvent.availableSeats }}</strong>
       </p>     
       
