Changed ui on client side, added some background images

--- a/client/src/app/client-page/client-events/client-events.component.scss
+++ b/client/src/app/client-page/client-events/client-events.component.scss
@@ -8,7 +8,7 @@
 
 
 
-  .all-games {
+  .div-cover {
     background-image: url('/assets/background1.jpg');
     background-size: cover;
     background-position: center;
