--- a/client/src/app/client-page/client-theatres/client-theatres.component.scss
+++ b/client/src/app/client-page/client-theatres/client-theatres.component.scss
@@ -7,6 +7,18 @@
 
  }
 
+ .div-cover {
+  background-image: url('/assets/background1.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 36px;
+}
+
  .container{
    margin-top: 3em;
    cursor: pointer;
