--- a/client/src/app/client-page/client-account-details/client-account-details.component.html
+++ b/client/src/app/client-page/client-account-details/client-account-details.component.html
@@ -1,7 +1,11 @@
-<div class="fullscreen">
 
+<div class="fullscreen">
 <app-client-navbar></app-client-navbar>
-<div class="container d-flex justify-content-center align-items-center vh-100">
+<div class="div-cover">
+  <h1>Your account details</h1>
+</div>
+
+<div class="container account-container vh-100">
     <div>
 
 
