--- a/client/src/app/client-page/client-account-details/client-account-details.component.scss
+++ b/client/src/app/client-page/client-account-details/client-account-details.component.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     right: 0;
     overflow: auto;
-    background: darkgray; /* Just to visualize the extent */
+    background-color:#F4F1F1
     
   }
 
@@ -14,4 +14,17 @@
     min-height: 500px;
     max-width: 700px;
     max-height: 500px;
+    margin-top:2em;
+}
+
+.div-cover {
+  background-image: url('/assets/background1.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 36px;
 }
