--- a/client/src/app/client-page/client-reservations/client-reservations.component.html
+++ b/client/src/app/client-page/client-reservations/client-reservations.component.html
@@ -1,5 +1,8 @@
+<div class="topOfPage">
 <app-client-navbar></app-client-navbar>
-
+<div class="div-cover">
+  <h1>Your reservations</h1>
+</div>
   
   <div class="main-body">
     <mat-form-field>
@@ -55,3 +58,4 @@
       <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
     </div>
   </div>
+</div>
