--- a/client/src/app/client-page/client-reservations/client-reservations.component.scss
+++ b/client/src/app/client-page/client-reservations/client-reservations.component.scss
@@ -9,6 +9,23 @@ table{
     }
     margin :0 auto;
 }
+.topOfPage{
+    width: 100%;
+    height: 100%;
+    background-color:#F4F1F1
+}
 .mat-icon-button{
     color:crimson
 }
+.div-cover {
+    background-image: url('/assets/background1.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 36px;
+    margin-bottom: 1em;
+  }
