--- a/client/src/app/client-page/client-events/client-events.component.html
+++ b/client/src/app/client-page/client-events/client-events.component.html
@@ -91,7 +91,10 @@
             <strong>{{ item.theatreName }}</strong>
           </p>
           <p class="card-text">
-            Available tickets: <strong>{{ item.availableSeats }}</strong>
+            Available tickets: <strong>{{ item.availableTickets }}</strong>
+          </p>
+          <p class="card-text">
+            Location: <strong>{{ item.location }}</strong>
           </p>
           <p class="card-text">
              <strong>{{ item.play.type.name }}</strong>
