--- a/client/src/app/client-page/client-theatres/client-theatres.component.html
+++ b/client/src/app/client-page/client-theatres/client-theatres.component.html
@@ -71,7 +71,7 @@
               <strong>{{ item.theatreName }}</strong>
             </p>
             <p class="card-text">
-              Available Seats: <strong>{{ item.availableSeats }}</strong>
+              Available Seats: <strong>{{ item.availableTickets }}</strong>
             </p>
             
             <p class="card-text">
