--- a/client/src/app/theatre-page/schedule/schedule.component.html
+++ b/client/src/app/theatre-page/schedule/schedule.component.html
@@ -20,8 +20,8 @@
       </ng-container>
   
       <ng-container matColumnDef="availableSeats">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> availableSeats </th>
-        <td mat-cell *matCellDef="let row"> {{row.availableSeats}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> availableTickets </th>
+        <td mat-cell *matCellDef="let row"> {{row.availableTickets}} </td>
       </ng-container>
   
       <ng-container matColumnDef="datetime">
