--- a/client/src/app/theatre-page/schedule/schedule.component.html
+++ b/client/src/app/theatre-page/schedule/schedule.component.html
@@ -23,6 +23,10 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> availableTickets </th>
         <td mat-cell *matCellDef="let row"> {{row.availableTickets}} </td>
       </ng-container>
+      <ng-container matColumnDef="location">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Location </th>
+        <td mat-cell *matCellDef="let row"> {{row.location}} </td>
+      </ng-container>
   
       <ng-container matColumnDef="datetime">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Datetime </th>
