--- a/client/src/app/theatre-page/add-edit-play/add-edit-play.component.html
+++ b/client/src/app/theatre-page/add-edit-play/add-edit-play.component.html
@@ -7,9 +7,10 @@
         (ngSubmit)="addPlay()"
         autocomplete="off"
       >
-        <h2 class="text-center text-primary">Add play</h2>
+        <h2 class="text-center text-primary">Add event</h2>
         <hr />
         <div class="mb-3">
+          <label for="name-input" class="form-label">Name</label>
           <input
             type="text"
             class="form-control"
@@ -27,6 +28,7 @@
           </div>
         </div>
         <div class="mb-3">
+          <label for="description-textarea" class="form-label">Description</label>
           <textarea
             type="text"
             class="form-control"
@@ -46,6 +48,7 @@
           </div>
         </div>
         <div class="mb-3">
+          <label for="type-select" class="form-label">Type</label>
           <select class="form-select" formControlName="type" name="playType">
             <option value="" disabled selected hidden >Select a type </option>
               <option *ngFor="let playType of playTypes$ | async" [ngValue]="playType">{{ playType.name }}</option>
