--- a/client/src/app/theatre-page/add-play/add-play.component.html
+++ b/client/src/app/theatre-page/add-play/add-play.component.html
@@ -7,7 +7,7 @@
           (ngSubmit)="addPlay()"
           autocomplete="off"
         >
-          <h2 class="text-center text-primary">Add play</h2>
+          <h2 class="text-center text-primary">Add event</h2>
           <hr />
           <div class="mb-3">
             <input
