--- a/client/src/app/theatre-page/schedule/schedule.component.html
+++ b/client/src/app/theatre-page/schedule/schedule.component.html
@@ -1,10 +1,13 @@
 <div #topOfPage></div>
 <app-theatre-navbar></app-theatre-navbar>
-<div class="d-flex justify-content-center align-items-center add-event">
-  <button mat raised-button class="btn btn-primary" (click)="openAddEditEventForm()">Add event</button>
-</div>
+
 
 <div class="main-body">
+  <div class="d-flex justify-content-end align-items-center add-div" style="margin-bottom:1em">
+    <a mat-icon-button (click)="openAddEditEventForm()">
+      <mat-icon style="transform:scale(2)" color="primary">add_box</mat-icon>
+    </a>
+  </div>
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Play" #input>
@@ -22,6 +25,10 @@
       <ng-container matColumnDef="availableSeats">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> availableTickets </th>
         <td mat-cell *matCellDef="let row"> {{row.availableTickets}} </td>
+      </ng-container>
+      <ng-container matColumnDef="city">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> city </th>
+        <td mat-cell *matCellDef="let row"> {{row.city}} </td>
       </ng-container>
       <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Location </th>
