--- a/client/src/app/theatre-page/theatre-account-page/theatre-account-page.component.html
+++ b/client/src/app/theatre-page/theatre-account-page/theatre-account-page.component.html
@@ -12,17 +12,9 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="form-group row mb-5">
-              <label for="name" class="col-sm-4 col-form-label">Name:</label>
-              <div class="col-sm-8">
-                <input
-                  type="text"
-                  class="form-control"
-                  name="name"
-                  id="name"
-                  readonly
-                />
-              </div>
+              
             </div>
+            
             <div class="form-group row mb-5">
               <label for="username" class="col-sm-4 col-form-label"
                 >Username:</label
@@ -76,6 +68,32 @@
                   id="eventsScheduled"
                 />
               </div>
+              
+              <form #changeNameForm="ngForm" (ngSubmit)="changeName()" autocomplete="off">
+                <label for="name" class="col-sm-4 col-form-label">Name:</label>
+                <div class="col-sm-8">
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="name"
+                    [(ngModel)]="model.name"
+                    id="name"
+                    maxlength="15"
+                    minlength="5"
+                    required
+                    #name="ngModel"
+                  />
+                </div>
+                <div *ngIf="name.invalid && name.touched" class="text-danger">
+                  New name is required and must be at least 5 characters.
+                 </div>
+                 <button
+                 class="btn btn-success me-2"
+                 type="submit"
+                 [disabled]="changeNameForm.invalid"
+               >Change name</button>
+              </form>
+  
               <div class="row justify-content-md-center">
                 <button
                   class="btn btn-outline-primary col-sm-5"
@@ -84,7 +102,7 @@
                   Change password
                 </button>
               </div>
-            </div>
+            </div>            
           </div>
 
           <div class="card-img-wrapper col-sm-6">
