--- a/client/src/app/theatre-page/theatre-navbar/theatre-navbar.component.html
+++ b/client/src/app/theatre-page/theatre-navbar/theatre-navbar.component.html
@@ -10,7 +10,7 @@
      
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/theatre/play">Plays</a>
+          <a class="nav-link" routerLink="/theatre/play">Events</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/theatre/schedule">Schedule</a>
